--- a/css/main.css
+++ b/css/main.css
@@ -117,6 +117,7 @@ input[type=file] {
   left: 0;
   right: 0;
   top: 53px;
+  z-index: 1;
 }
 .header__wrapper {
   display: flex;
@@ -127,11 +128,13 @@ input[type=file] {
 .nav {
   max-width: 515px;
   width: 100%;
+  margin: 0 auto;
 }
 .nav__list {
   display: flex;
-  justify-content: space-between;
+  justify-content: center;
   align-items: center;
+  gap: 70px;
 }
 .nav__link {
   font-family: "Source Code Pro", monospace;
@@ -172,8 +175,61 @@ input[type=file] {
   width: 40px;
   transition: all 0.3s ease;
   color: #fff;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
+.burger {
+  display: none;
+}
+
+@media screen and (max-width: 996px) {
+  .nav__list {
+    gap: 50px;
+  }
+}
+@media screen and (max-width: 768px) {
+  .burger {
+    display: block;
+    width: 30px;
+    height: 1px;
+    background-color: #fff;
+    position: relative;
+  }
+  .burger::before, .burger::after {
+    content: "";
+    position: absolute;
+    background-color: #fff;
+    width: 100%;
+    height: 100%;
+    left: 0;
+  }
+  .burger::after {
+    bottom: -10px;
+  }
+  .burger::before {
+    top: -10px;
+  }
+  .burger.close {
+    transform: rotate(-45deg);
+  }
+  .burger.close::before {
+    opacity: 0;
+  }
+  .burger.close::after {
+    transform: rotate(90deg);
+    bottom: 0;
+  }
+  .nav {
+    display: none;
+  }
+}
+@media screen and (max-width: 480px) {
+  .socials {
+    display: none;
+  }
+}
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
