--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -11,6 +11,7 @@
   left: 0;
   right: 0;
   top: 53px;
+  z-index: 1;
   // height: 800px;
   // width: 100%;
   // position: relative;
@@ -29,7 +30,6 @@
   // }
 
   &__wrapper {
-    // padding-top: 53px;
     @include m.flex(space-between);
   }
 }
@@ -37,9 +37,11 @@
 .nav {
   max-width: 515px;
   width: 100%;
+  margin: 0 auto;
 
   &__list {
-    @include m.flex(space-between);
+    @include m.flex(center);
+    gap: 70px;
   }
 
   &__link {
@@ -83,4 +85,66 @@
   width: 40px;
   transition: all 0.3s ease;
   color: #fff;
+  @include m.flex(center);
+}
+
+.burger {
+  display: none;
+}
+
+@media screen and (max-width: 996px) {
+  .nav {
+    &__list {
+      gap: 50px;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .burger {
+    display: block;
+    width: 30px;
+    height: 1px;
+    background-color: #fff;
+    position: relative;
+
+    &::before,
+    &::after {
+      content: '';
+      position: absolute;
+      background-color: #fff;
+      width: 100%;
+      height: 100%;
+      left: 0;
+    }
+
+    &::after {
+      bottom: -10px;
+    }
+
+    &::before {
+      top: -10px;
+    }
+  }
+
+  .burger.close {
+    transform: rotate(-45deg);
+    &::before {
+      opacity: 0;
+    }
+    &::after {
+      transform: rotate(90deg);
+      bottom: 0;
+    }
+  }
+
+  .nav {
+    display: none;
+  }
+}
+
+@media screen and (max-width: 480px){
+  .socials {
+    display: none;
+  }
 }
