--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -2,32 +2,11 @@
 @use 'mixin' as m;
 
 .header {
-  background: linear-gradient(
-    207deg,
-    rgba(126, 90, 255, 1) 0%,
-    rgba(85, 183, 255, 0.99) 100%
-  );
   position: absolute;
   left: 0;
   right: 0;
   top: 53px;
-  z-index: 1;
-  // height: 800px;
-  // width: 100%;
-  // position: relative;
-
-  // &::before {
-  //   content: '';
-  //   background-image: url('../assets/images/bg_image.png');
-  //   background-repeat: no-repeat;
-  //   background-position: center;
-  //   background-size: cover;
-  //   position: absolute;
-  //   top: 0;
-  //   left: 0;
-  //   width: 100%;
-  //   height: 100%;
-  // }
+  z-index: 99;
 
   &__wrapper {
     @include m.flex(space-between);
@@ -93,6 +72,9 @@
 }
 
 @media screen and (max-width: 996px) {
+  .header {
+    top: 25px;
+  }
   .nav {
     &__list {
       gap: 50px;
@@ -101,6 +83,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .header {
+    top: 10px;
+  }
   .burger {
     display: block;
     width: 30px;
@@ -143,7 +128,7 @@
   }
 }
 
-@media screen and (max-width: 480px){
+@media screen and (max-width: 480px) {
   .socials {
     display: none;
   }
