--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -1,3 +1,117 @@
 @use 'vars' as v;
 @use 'mixin' as m;
 
+.hero {
+  position: relative;
+  padding-top: 107px;
+  background: url('../assets/images/bg_image.png') no-repeat;
+  background-size: contain;
+  width: 100%;
+  height: 800px;
+
+  &::after {
+    content: '';
+    position: absolute;
+    left: 0;
+    top: 0;
+    background: linear-gradient(
+      207deg,
+      rgba(126, 90, 255, 1) 0%,
+      rgba(85, 183, 255, 0.99) 100%
+    );
+    width: 100%;
+    height: 100%;
+    z-index: -1;
+  }
+}
+
+.screen {
+  padding-top: 223px;
+  width: 100%;
+  max-width: 919px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.main__title {
+  font-weight: 700;
+  font-size: 80px;
+  letter-spacing: 0.1rem;
+  margin-bottom: 20px;
+}
+
+.subtitle {
+  letter-spacing: 0.3rem;
+}
+
+.dots {
+  position: absolute;
+  @include m.flex();
+  flex-direction: column;
+  gap: 40px;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 20px;
+  height: 210px;
+  width: 10px;
+
+  & .dot {
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 1px solid #fff;
+    flex: 0 0 auto;
+  }
+}
+
+.dot.active {
+  background-color: #fff;
+}
+
+@media screen and (max-width: 996px) {
+  .hero {
+    height: 600px;
+  }
+  .screen {
+    padding-top: 150px;
+  }
+
+  .main__title {
+    font-size: 50px;
+  }
+  .subtitle {
+    font-size: 16px;
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .hero {
+    height: 400px;
+  }
+  .screen {
+    padding-top: 70px;
+  }
+  .main__title {
+    font-size: 36px;
+  }
+  .subtitle {
+    font-size: 14px;
+  }
+  .dots {
+    flex-direction: row;
+    top: 90%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    height: 10px;
+    width: 210px;
+  }
+}
+
+@media screen and (max-width: 480px) {
+  .screen {
+    padding-top: 40px;
+  }
+  .main__title {
+    font-size: 30px;
+  }
+}
