created images section, styled it , added adaptibe

--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -1,3 +1,5 @@
 $container-width: 1200px;
 $font-family: "Montserrat", sans-serif;
 $header-family: "Source Code Pro", monospace;
+$third-family: "Open Sans", sans-serif;
+$main-color: #2c4058;
