--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Source+Code+Pro:ital,wght@0,200..900;1,200..900&display=swap");
 /* Reset and base styles  */
 * {
   padding: 0px;
@@ -231,6 +231,9 @@ input[type=file] {
   }
 }
 @media screen and (max-width: 480px) {
+  .header {
+    position: fixed;
+  }
   .socials {
     display: none;
   }
@@ -242,6 +245,7 @@ input[type=file] {
   background-size: contain;
   width: 100%;
   height: 800px;
+  margin-bottom: 100px;
 }
 .hero::after {
   content: "";
@@ -342,15 +346,202 @@ input[type=file] {
     font-size: 30px;
   }
 }
+.title_2 {
+  font-weight: 700;
+  font-size: 44px;
+  text-align: center;
+  color: #2c4058;
+  position: relative;
+  margin-bottom: 162px;
+}
+.title_2::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 100px;
+  height: 1px;
+  background-color: #2c4058;
+  top: -30px;
+}
+
+.content__wrapper {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  flex-direction: column;
+  row-gap: 120px;
+  margin-bottom: 150px;
+}
+
+.content__box {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 50px;
+}
+
+.image {
+  max-width: 630px;
+  width: 100%;
+  max-height: 470px;
+  height: 100%;
+  position: relative;
+}
+.image img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.rect {
+  position: absolute;
+  z-index: -1;
+  background-color: #55b7ff;
+  top: -12%;
+  bottom: 12%;
+  left: -34%;
+  right: 42%;
+}
+
+.description {
+  max-width: 470px;
+  color: #2c4058;
+}
+
+.title_3 {
+  font-size: 22px;
+}
+
+.desc_title {
+  font-weight: 700;
+  font-size: 44px;
+  white-space: nowrap;
+  margin-bottom: 19px;
+  max-width: 476px;
+}
+
+.text {
+  font-family: "Open Sans", sans-serif;
+  line-height: 167%;
+  max-width: 470px;
+  margin-bottom: 40px;
+}
+
+.more_btn {
+  font-size: 14px;
+  color: #000;
+  padding: 16px 41px;
+  border: 1px solid #2c4058;
+  margin-bottom: 60px;
+  transition: all 0.3s linear;
+}
+.more_btn:hover {
+  transform: scale(1.1);
+}
+
+.coords {
+  font-family: "Open Sans", sans-serif;
+  font-style: italic;
+  font-size: 15px;
+  color: #000;
+  position: relative;
+  padding-left: 19px;
+}
+.coords::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 10px;
+  height: 15px;
+  background-image: url("../assets/images/pointer.svg");
+  background-repeat: no-repeat;
+  background-size: contain;
+}
+
+.reverse {
+  flex-direction: row-reverse;
+}
+
+.rect_2 {
+  position: absolute;
+  background-color: #7e5aff;
+  left: 42%;
+  right: -34%;
+  top: -12%;
+  bottom: 12%;
+  z-index: -1;
+}
+
+@media screen and (max-width: 996px) {
+  .title_2 {
+    font-size: 30px;
+    margin-bottom: 100px;
+  }
+  .desc_title {
+    font-size: 28px;
+  }
+}
+@media screen and (max-width: 860px) {
+  .content__wrapper {
+    row-gap: 60px;
+    margin-bottom: 50px;
+  }
+  .content__box {
+    flex-direction: column;
+    gap: 30px;
+  }
+  .title_2 {
+    font-size: 24px;
+    margin-bottom: 70px;
+  }
+  .desc_title {
+    font-size: 22px;
+  }
+  .title_3 {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 480px) {
+  .content__box {
+    row-gap: 40px;
+  }
+  .more_btn {
+    display: block;
+    margin: 20px auto;
+  }
+  .title_3 {
+    font-size: 18px;
+  }
+  .text {
+    font-size: 16px;
+    margin-bottom: 20px;
+  }
+}
 body {
   font-family: "Montserrat", sans-serif;
   font-size: 18px;
   font-weight: 400;
   color: #fff;
+  background-color: #fff;
+}
+
+.wrapper {
+  max-width: 1600px;
+  margin: 0 auto;
+  position: relative;
 }
 
 .container {
   margin: 0 auto;
   max-width: 1200px;
   padding: 0 15px;
+}
+
+@media screen and (max-width: 1300px) {
+  .wrapper {
+    overflow: hidden;
+  }
 }/*# sourceMappingURL=main.css.map */
