--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,7 +6,11 @@
 @use 'hero';
 @use 'section';
 @use 'cards';
+@use 'gallery';
 
+html {
+  scroll-behavior: smooth;
+}
 
 body {
   font-family: v.$font-family;
@@ -14,6 +18,7 @@ body {
   font-weight: 400;
   color: #fff;
   background-color: #fff;
+  min-height: 100%;
 }
 
 .wrapper {
@@ -27,6 +32,62 @@ body {
   max-width: v.$container-width;
   padding: 0 15px;
 }
+
+
+// slick 
+.slick-dots {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+}
+
+.slick-dots li button::before {
+  left: -300px;
+  top: -300px;
+  text-indent: 0;
+  position: absolute;
+  font-size: 0; /* hides the numbers */
+  color: transparent;
+  content: ''; /* remove numbers */
+}
+
+.slick-dots li button {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #ccc;
+}
+
+.slick-dots li.slick-active button {
+  background: #333;
+}
+
+/* hide numbers both if they are button text or pseudo-element */
+.slick-dots li button,
+.slick-dots li button::before {
+  color: transparent !important;
+  font-size: 0 !important;
+  line-height: 0 !important;
+  text-indent: -9999px !important; /* in case it's visible as text */
+  content: '' !important; /* for pseudo-element */
+  background: none !important;
+  border: none !important;
+  box-shadow: none !important;
+}
+
+/* restore visible circular dots if you want plain dots instead of nothing */
+.slick-dots li button {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  background: #ccc;
+  padding: 0;
+  margin: 0 6px;
+}
+.slick-dots li.slick-active button {
+  background: #333;
+}
+
 
 @media screen  and (max-width: 1300px){
   .wrapper {
