--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -129,9 +129,9 @@
 }
 
 @media screen and (max-width: 480px) {
-  .header {
-    position: fixed;
-  }
+  // .header {
+  //   position: fixed;
+  // }
   .socials {
     display: none;
   }
