--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -3,11 +3,11 @@
 
 .hero {
   position: relative;
-  padding-top: 107px;
-  background: url('../assets/images/bg_image.png') no-repeat;
+  // padding-top: 107px;
+  // background: url('../assets/images/bg_image.png') no-repeat;
   background-size: contain;
   width: 100%;
-  height: 800px;
+  // height: 800px;
   margin-bottom: 100px;
 
   &::after {
@@ -15,11 +15,11 @@
     position: absolute;
     left: 0;
     top: 0;
-    background: linear-gradient(
-      207deg,
-      rgba(126, 90, 255, 1) 0%,
-      rgba(85, 183, 255, 0.99) 100%
-    );
+    // background: linear-gradient(
+    //   207deg,
+    //   rgba(126, 90, 255, 1) 0%,
+    //   rgba(85, 183, 255, 0.99) 100%
+    // );
     width: 100%;
     height: 100%;
     z-index: -1;
@@ -27,10 +27,10 @@
 }
 
 .screen {
-  padding-top: 223px;
   width: 100%;
-  max-width: 919px;
-  margin: 0 auto;
+  // max-width: 919px;
+  height: 100%;
+  // margin: 223px auto;
   text-align: center;
 }
 
@@ -39,6 +39,8 @@
   font-size: 80px;
   letter-spacing: 0.1rem;
   margin-bottom: 20px;
+  // white-space: nowrap;
+  text-transform: uppercase;
 }
 
 .subtitle {
@@ -50,19 +52,19 @@
   bottom: 10%;
   left: 50%;
   transform: translateX(-50%);
-  background: url('../assets/images/Arrow.svg') no-repeat center/cover;
+  background: url('../assets/images/Arrow.svg') no-repeat;
   width: 40px;
   height: 40px;
 }
 
 
 @media screen and (max-width: 996px) {
-  .hero {
-    height: 600px;
-  }
-  .screen {
-    padding-top: 150px;
-  }
+  // .hero {
+  //   height: 600px;
+  // }
+  // .screen {
+  //   padding-top: 150px;
+  // }
 
   .main__title {
     font-size: 50px;
@@ -73,32 +75,32 @@
 }
 
 @media screen and (max-width: 768px) {
-  .hero {
-    height: 400px;
-  }
-  .screen {
-    padding-top: 70px;
-  }
+  // .hero {
+  //   height: 400px;
+  // }
+  // .screen {
+  //   padding-top: 70px;
+  // }
   .main__title {
     font-size: 36px;
   }
   .subtitle {
     font-size: 14px;
   }
-  .dots {
-    flex-direction: row;
-    top: 90%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    height: 10px;
-    width: 210px;
-  }
+  // .dots {
+  //   flex-direction: row;
+  //   top: 90%;
+  //   left: 50%;
+  //   transform: translate(-50%, -50%);
+  //   height: 10px;
+  //   width: 210px;
+  // }
 }
 
 @media screen and (max-width: 480px) {
-  .screen {
-    padding-top: 40px;
-  }
+  // .screen {
+  //   padding-top: 40px;
+  // }
   .main__title {
     font-size: 30px;
   }
