--- a/css/main.css
+++ b/css/main.css
@@ -269,10 +269,11 @@ input[type=file] {
   position: absolute;
   left: 0;
   right: 0;
-  top: 53px;
-  z-index: 99;
+  top: 33px;
+  z-index: 9;
 }
 .header__wrapper {
+  padding-top: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -371,6 +372,11 @@ input[type=file] {
     top: -10px;
   }
   .burger.close {
+    position: absolute;
+    z-index: 999;
+    background-color: #fff;
+    top: 80px;
+    right: 30px;
     transform: rotate(-45deg);
   }
   .burger.close::before {
@@ -380,8 +386,28 @@ input[type=file] {
     transform: rotate(90deg);
     bottom: 0;
   }
+  .header {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
   .nav {
     display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(42, 85, 126, 0.9);
+    padding: 80px 0;
+    text-align: center;
+  }
+  .nav__list {
+    flex-direction: column;
+    gap: 30px;
+  }
+  .nav.active {
+    display: block;
   }
 }
 @media screen and (max-width: 480px) {
@@ -431,6 +457,11 @@ input[type=file] {
   background: url("../assets/images/Arrow.svg") no-repeat;
   width: 40px;
   height: 40px;
+}
+
+#more_details {
+  opacity: 0.5;
+  cursor: not-allowed;
 }
 
 @media screen and (max-width: 996px) {
@@ -795,6 +826,10 @@ input[type=file] {
   grid-row: 2;
 }
 
+.hidden-img {
+  display: none;
+}
+
 /* Responsive */
 @media (max-width: 1024px) {
   .gallery__grid {
@@ -887,6 +922,18 @@ input[type=file] {
 
 .mb_42 {
   margin-bottom: 42px;
+}
+
+.error {
+  color: red;
+  font-size: 0.8em;
+  margin-top: 4px;
+  display: block;
+}
+
+.form_input.error {
+  border-color: red;
+  outline: none;
 }
 
 @media screen and (max-width: 890px) {
