--- a/scss/_gallery.scss
+++ b/scss/_gallery.scss
@@ -62,6 +62,9 @@
 .grid-item:nth-child(4) { grid-column: 3; grid-row: 2; }
 .grid-item:nth-child(5) { grid-column: 4; grid-row: 2; }
 
+.hidden-img {
+  display: none;;
+}
 /* Responsive */
 @media (max-width: 1024px) {
   .gallery__grid {
