--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -5,10 +5,11 @@
   position: absolute;
   left: 0;
   right: 0;
-  top: 53px;
-  z-index: 99;
+  top: 33px;
+  z-index: 9;
 
   &__wrapper {
+    padding-top: 20px;
     @include m.flex(space-between);
   }
 }
@@ -113,6 +114,11 @@
   }
 
   .burger.close {
+    position: absolute;
+    z-index: 999;
+    background-color: #fff;
+    top: 80px;
+    right: 30px;
     transform: rotate(-45deg);
     &::before {
       opacity: 0;
@@ -122,16 +128,38 @@
       bottom: 0;
     }
   }
+  .header {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+  }
 
   .nav {
     display: none;
+    position: absolute;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    background-color: rgba(42, 85, 126, 0.9);
+    padding: 80px 0;
+    text-align: center;
+
+
+    &__list {
+      flex-direction: column;
+      gap: 30px;
+    }
+    &.active {
+      display: block;
+    }
   }
 }
 
 @media screen and (max-width: 480px) {
   // .header {
   //   position: fixed;
-  // }
+  
   .socials {
     display: none;
   }
