--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -57,6 +57,11 @@
   height: 40px;
 }
 
+#more_details{
+  opacity: 0.5;
+  cursor: not-allowed;
+}
+
 
 @media screen and (max-width: 996px) {
   // .hero {
