--- a/scss/_hero.scss
+++ b/scss/_hero.scss
@@ -55,11 +55,7 @@
   background: url('../assets/images/Arrow.svg') no-repeat;
   width: 40px;
   height: 40px;
-}
-
-#more_details{
-  opacity: 0.5;
-  cursor: not-allowed;
+  z-index: 1;
 }
 
 
