--- a/scss/main.scss
+++ b/scss/main.scss
@@ -16,9 +16,9 @@ html, body {
   overflow-x: hidden;
 }
 
-html {
-  scroll-behavior: smooth;
-}
+// html {
+//   scroll-behavior: smooth;
+// }
 
 body {
   font-family: v.$font-family;
