--- a/scss/_cards.scss
+++ b/scss/_cards.scss
@@ -45,6 +45,7 @@
   margin-right: 20px;
   position: relative;
   max-width: 400px;
+  height: 514px;
   &__image {
     height: 100%;
     max-height: 240px;
